--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,8 @@ spring.datasource.password=!Mzh15899038033
 
 mybatis.type-aliases-package=com.necpu.model
 mybatis.mapper-locations=classpath*:/mappers/*.xml
+
+spring.redis.host=10.0.2.7
+spring.redis.port=6379
+spring.redis.password=123456
+spring.redis.database=0
